# Previous-Projects

./: OzU Rover.txt
Distributed Optimization/: N_mass_spring_damper.m  admm_practice.m  admm_tryouts.m  alex_admm.m  create_constraints.m  formation.m  multi_robot_centralized_OCP.m  quadrotor.m  quadrotor_simulation.m  single_robot_OCP.m  take_derivatives.m  vdp_take_derivatives.m
Distributed Optimization/et_dmpc/: build_AA.m  build_A_obs_b_obs.m  build_H_bar.m  build_bounds.m  build_f.m  build_g.m  (+22 more)
MATLAB/MCRM/universal_robot/universal_robot/: package.xml
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_action_server/: CMakeLists.txt  package.xml
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_action_server/include/robotiq_action_server/: robotiq_c_model_action_server.h
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_action_server/launch/: robotiq_gripper_action_server.launch
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_action_server/src/: robotiq_action_server_client_test.cpp  robotiq_c_model_action_server.cpp  robotiq_c_model_action_server_node.cpp
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_c_model_control/: CMakeLists.txt  package.xml
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_c_model_control/nodes/: CModelRtuNode.py
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_c_model_control/src/robotiq_c_model_control/: baseCModel.py
MATLAB/MCRM/universal_robot/ur_endeffectors/robotiq_c_model_control/src/robotiq_modbus_rtu/: comModbusRtu.py
MATLAB/MCRM/universal_robot/ur_examples/: CMakeLists.txt  package.xml
MATLAB/MCRM/universal_robot/ur_examples/launch/: ur10_real_publisher.launch  ur10_sim_publisher.launch  ur3_real_publisher.launch  ur3_sim_publisher.launch  ur_publisher_common.launch
MATLAB/MCRM/universal_robot/ur_examples/src/ur_examples/: ur_mixed_publisher.cpp  ur_sim_gripper_control_client.cpp
MATLAB/MCRM/universal_robot/ur_gazebo/: CMakeLists.txt  package.xml
MATLAB/MCRM/universal_robot/ur_gazebo/config/: ur3.perspective
MATLAB/MCRM/universal_robot/ur_gazebo/controller/: controller_ur10.yaml  controller_ur3.yaml
MATLAB/MCRM/universal_robot/ur_gazebo/include/roboticsgroup_gazebo_plugins/: disable_link_plugin.h  mimic_joint_plugin.h
MATLAB/MCRM/universal_robot/ur_gazebo/launch/: ur10_gazebo.launch  ur3_gazebo.launch
MATLAB/MCRM/universal_robot/ur_gazebo/models/block/: model.config  model.sdf
MATLAB/MCRM/universal_robot/ur_gazebo/models/box/: model.config  model.sdf
MATLAB/MCRM/universal_robot/ur_gazebo/models/desk/: model.config  model.sdf
MATLAB/MCRM/universal_robot/ur_gazebo/models/marker/: model.config  model.sdf
MATLAB/MCRM/universal_robot/ur_gazebo/models/marker/materials/scripts/: marker.material
MATLAB/MCRM/universal_robot/ur_gazebo/patterns/: marker.patt
MATLAB/MCRM/universal_robot/ur_gazebo/src/roboticsgroup_gazebo_plugins/: disable_link_plugin.cpp  mimic_joint_plugin.cpp
MATLAB/MCRM/universal_robot/ur_gazebo/src/ur_msgs_translation/: ur_msgs_translation_main.cpp
MATLAB/MCRM/universal_robot/ur_gazebo/worlds/: ur10_pick_and_place.world  ur_visual.world
MATLAB/MCRM/universal_robot/ur_launch/: CMakeLists.txt  package.xml
MATLAB/MCRM/universal_robot/ur_launch/launch/: ur10_real_visualization.launch  ur10_real_visualization_obstacle.launch  ur10_sim_gazebo.launch  ur10_sim_gazebo_obstacle.launch  ur10_sim_visualization.launch  ur10_sim_visualization_obstacle.launch  ur3_real_visualization.launch  ur3_real_visualization_obstacle.launch  ur3_sim_gazebo.launch  ur3_sim_gazebo_obstacle.launch  ur3_sim_visualization.launch  ur3_sim_visualization_obstacle.launch
MATLAB/MCRM/universal_robot/ur_utilities/: CMakeLists.txt  package.xml
MATLAB/MCRM/universal_robot/ur_utilities/include/ur_utilities/ur_collision/: ur_collision.h
MATLAB/MCRM/universal_robot/ur_utilities/include/ur_utilities/ur_description/: ur10_description.h  ur3_description.h  ur_description.h
MATLAB/MCRM/universal_robot/ur_utilities/include/ur_utilities/ur_kinematic/: ur_inverse_kinematic.h  ur_kinematic.h
MATLAB/MCRM/universal_robot/ur_utilities/include/ur_utilities/ur_manipulator/: ur_manipulator.h
MATLAB/MCRM/universal_robot/ur_utilities/include/ur_utilities/ur_misc/: ur_utility.h
MATLAB/MCRM/universal_robot/ur_utilities/launch/: prepare_benchmarks.launch
MATLAB/MCRM/universal_robot/ur_utilities/src/benchmarks/: ur_collision_test.cpp  ur_inverse_kinematic_test.cpp  ur_kinematic_test.cpp
MATLAB/MCRM/universal_robot/ur_utilities/src/ur_collision/: ur_collision.cpp
MATLAB/MCRM/universal_robot/ur_utilities/src/ur_description/: ur10_description.cpp  ur3_description.cpp  ur_description.cpp
MATLAB/MCRM/universal_robot/ur_utilities/src/ur_kinematic/: ur_inverse_kinematic.cpp  ur_kinematic.cpp
MATLAB/MCRM/universal_robot/ur_utilities/src/ur_manipulator/: ur_manipulator.cpp
MATLAB/MCRM/universal_robot/ur_utilities/src/ur_misc/: ur_utility.cpp
MATLAB/MCRM/universal_robot/ur_utilities/src/ur_tools/: collision_marker_publisher.cpp
Makengineer/: MAKEngineer Atölye Künyesi.docx
NMPC_2-DoF Robot/: closed_loop_plots.m  fixed_end_time_OCP_plots.m  forwardKinematics.m  free_end_time_OCP_plots.m  heun.m  plotInputs.m  plotStates.m  plot_q1q2.m  plot_xy.m  results_1.mat  results_2.mat  results_3.mat  rk4.m  two_link_planar_arm_NMPC.m  two_link_planar_arm_fixed_end_time_OCPs.m  two_link_planar_arm_free_end_time_OCPs.m  two_link_planar_arm_incorrect_model.m  two_link_planar_arm_model.m  two_link_planar_arm_test.m
NMPC_Towing Kite/: APC_PG 1.3_Presentation.pptx  APC_PG 1.3_towing_kite_MPC_with_wind_model.py  APC_PG 1.3_towing_kite_MPC_without_wind_model.py  wind_model.py
Pavotek/: KonsantratorListener.cpp  KonsantratorListener.h  Ubuntu Kurulum.docx  memstat.txt
Telcoset/: AWS IoT vs Microsoft Azure IoT.docx  Analog and Digital.docx  Arduino Hardware & PinOut.docx  Arduino.docx  Bitcoin & Blockchain Technology.docx  Cloud Computing.docx  Logic Levels.docx  Microsoft Azure.docx  Networking Concepts.docx  Networking Protocols & Terminology.docx  Physics.docx  Serial Communication.docx  Torrents & Wi-Fi.docx
(+1023 files in other folders)
