<package>
  <name>universal_robot</name>
  <version>1.0.0</version>
  <description>
      Drivers, description, and utilities for Universal Robot Arms.
  </description>

  <maintainer email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</maintainer>

  <license>Unpublished</license>

  <url type="website">https://www.rst.e-technik.tu-dortmund.de</url>

  <author email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</author>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author>Stuart Glaser</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author>Wim Meeussen</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>  
  <run_depend>ur_description</run_depend>
  <run_depend>ur_modern_driver</run_depend>
  <run_depend>ur_utilities</run_depend>
  <run_depend>gripper_gui</run_depend>
  <run_depend>robotiq_action_server</run_depend>
  <run_depend>robotiq_c_model_control</run_depend>
  <run_depend>robotiq_force_torque_sensor</run_depend>
  <run_depend>ur_launch</run_depend>
  <run_depend>ur_examples</run_depend>
  <run_depend>ur_gazebo</run_depend>
  <run_depend>ur_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
