<?xml version="1.0"?>
<package>
  <name>ur_examples</name>
  <version>1.0.0</version>
  <description>
      Examples for controlling UR3/UR10 at RST
  </description>

  <author email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</author>
  <maintainer email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</maintainer>

  <license>BSD</license>

  <url type="website">https://www.rst.e-technik.tu-dortmund.de</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>control_msgs</build_depend>  
  <build_depend>ur_utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>ur_utilities</run_depend>

  <export>
  </export>
</package>
